pkg/syncer/spec/dns/deployment_dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Name
  namespace: Namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: Name
  template:
    metadata:
      labels:
        app: Name
    spec:
      containers:
        - name: kcp-dns
          command:
            - /ko-app/syncer
          args:
            - dns
            - start
            - --configmap-name
            - ConfigMapName
          image: Image
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
      serviceAccountName: Name
