pkg/syncer/spec/dns/service_dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: Name
  namespace: Namespace
  labels:
    app: Name
spec:
  type: ClusterIP
  selector:
    app: Name
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 5353
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 5353
